--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "license": "MIT",
     "autoload": {
         "psr-4": {
-            "Code4Recovery\\C4RSpec\\": "src/"
+            "Code4Recovery\\": "src"
         }
     },
     "authors": [
